<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.location_reminders.location_reminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".location_reminders.ReminderDescriptionActivity">
        <!--DONE: add the design of the reminder details-->

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reminder Details"
            style="@style/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/reminderContents"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/reminderFieldTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_title" />

                <TextView
                    style="@style/reminderFieldContentsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{reminderDataItem.title}"
                    tools:text="Title" />

                <TextView
                    style="@style/reminderFieldTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_desc" />

                <TextView
                    style="@style/reminderFieldContentsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{reminderDataItem.description}"
                    tools:text="Description" />

                <TextView
                    style="@style/reminderFieldTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_location"  />

                <TextView
                    style="@style/reminderFieldContentsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{reminderDataItem.location}"
                    tools:text="Location" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>