<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.udacity.location_reminders.view.save_reminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/placePanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MapsActivity"
            tools:layout="@layout/activity_reminders" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/placePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            android:padding="@dimen/padding_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/placeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.locationReminder.location}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/unknown_location" />

            <SeekBar
                android:id="@+id/radiusSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:max="300"
                android:min="10"
                android:progress="@={vm.roundGeofenceRadiusSelection}"
                app:layout_constraintBottom_toTopOf="@id/radiusExplanation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/placeName"
                tools:progress="150" />

            <TextView
                android:id="@+id/radiusExplanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_normal"
                android:text="@{@string/geofence_radius_description(vm.roundGeofenceRadiusSelection)}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/geofence_radius_description" />

            <Button
                android:id="@+id/save"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.saveLocation()}"
                android:text="@string/save"

                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
